<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/enter_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/question_text"
                android:textSize="18sp" />

            <!--android:layout_height="wrap_content"-->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/create_card_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/add_line"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:padding="4dp"
                    android:background="@drawable/outline"
                    android:contentDescription="@string/add_line_text"
                    android:src="@drawable/ic_baseline_add_24" />

                <ImageButton
                    android:id="@+id/delete_line"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:padding="4dp"
                    android:background="@drawable/outline"
                    android:contentDescription="@string/delete_line_text"
                    android:src="@drawable/ic_baseline_remove_24" />
            </LinearLayout>
            <AutoCompleteTextView
                android:id="@+id/choose_category"
                android:hint="@string/category_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/deleteCardButton"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="8dp"
        android:text="@string/deleteCardText"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/round_corners"
        android:stateListAnimator="@animator/main_button_animator" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp">

        <Button
            android:id="@+id/save_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="8dp"
            android:background="@drawable/round_corners"
            android:stateListAnimator="@animator/main_button_animator"
            android:text="@string/save_text"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp" />

        <Button
            android:id="@+id/switch_hint_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="8dp"
            android:text="@string/switch_text"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/round_corners"
            android:stateListAnimator="@animator/main_button_animator"/>

    </LinearLayout>


</LinearLayout>